Repair overflow and positioning issue

--- a/src/form.css
+++ b/src/form.css
@@ -32,7 +32,7 @@ input.valid-border:focus {
   position: relative;
   padding-left: 30px !important;
   padding-right: 30px !important;
-  padding-top: 20px !important;
+  padding-top: 1px !important;
   background-color: #E0EDFF;
 }
 
@@ -56,13 +56,14 @@ input.valid-border:focus {
 .outer {
     display: table;
     /* position: absolute; */
-    height: 100%;
+    height: 636px;
     width: 100%;
 }
 
 .middle {
     display: table-cell;
     vertical-align: middle;
+    transform: translateY(-10%)
 }
 
 .inner {
@@ -75,7 +76,7 @@ input.valid-border:focus {
   position: absolute !important;
   bottom: 20px !important;
   left: 50%;
-  transform: translateX(-50%)
+  transform: translateX(-50%);
 }
 
 .tabButton {
@@ -272,6 +273,12 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"
 
 
 @media only screen and (max-width: 600px) {
+.outer {
+    display: table;
+    /* position: absolute; */
+    height: 100vh;
+    width: 100%;
+}
   .slideContent {
     padding: 25px 30px !important;
     overflow: visible;
@@ -282,6 +289,7 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"
     padding-right: 0px !important;
     padding-left: 0px !important;
     padding-top: 0px !important;
+    padding-bottom: 0px !important;
     height: 100%;
     background-color: #E0EDFF;
   }
